--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                     <header>
                                         <h3><a href="https://github.com/Aniqa990/Online-Ecommerce-Store-Data-Structures-Project">Ecommerce Program</a></h3>
                                     </header>
-                                    <p>A C++ program which utilizes data structures to develope an efficient order management and delivery system for an online shop.</p>
+                                    <p>A C++ program which utilizes data structures to develop an efficient order management and delivery system for an online shop.</p>
                                 </article>
                                 <article class="loading">
                                     <a href="https://github.com/Aniqa990/OOP-Hotel-Management-System" class="image featured"><img src="images/hotel-management.jpg" alt="hotel restaurant" loading="lazy"></a>
