--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                                     <p>A static landing page for lamps created with HTML and CSS.</p>
                                 </article>
                             </div>
-                            <span class="forward">&#10095;</span>
-                            <span class="backward">&#10094;</span>
+                            <span class="forward"></span>
+                            <span class="backward"></span>
                         </section>
 
             </section> <!-- end s-projects -->
@@ -314,7 +314,7 @@
         <footer class="s-footer" id="footer">
             <div class="row s-footer__content">                  
 
-                <div class="column xl-3 lg-6 md-12 tab-12 s-footer__block s-footer__newsletter">
+                <div class="column xl-6 lg-6 md-10 tab-12 mob-12 s-footer__block s-footer__newsletter">
                     <h2>Contact Me</h2>
 
                     <div class="subscribe-form">
@@ -327,27 +327,7 @@
                             <div class="mc-status"></div>
                         </form>
                     </div>
-                </div>
-
-                <div class="column xl-3 lg-6 md-12 s-footer__block s-footer__info">
-                    <div class="personal-info">
-                        <div class="address">
-                            <h3>Address</h3>
-                            Block 2, Gulistan-e-Johar,<br>
-                            Karachi, Sindh,<br>
-                            Pakistan
-                        </div>
-                        <div class="phone">
-                            <h3>Phone</h3>
-                            +92 334 2221019
-                        </div>
-                        <div class="gmail">
-                            <h3>Email</h3>
-                            aniqaazhar99@gmail.com
-                        </div>
-                    </div>
-                </div>
-            </div>    
+                </div>   
             
             <div class="row s-footer__bottom">
                 <div class="column xl-6 lg-12">
