adding google analytics tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta name="description" content="Portfolio Website for Aniqa Azhar. Web developer, machine learning and AI enthusiast. Aspiring software and AI engineer. Contact me for internships and job opportunities.">
     <title>Aniqa Azhar - My Portfolio</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZRJN0D82N"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QZRJN0D82N');
+    </script>
+
     <script>
         document.documentElement.classList.remove('no-js');
         document.documentElement.classList.add('js');
