--- a/single.html
+++ b/single.html
@@ -8,6 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Single - Monica</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZRJN0D82N"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QZRJN0D82N');
+    </script>
+
     <script>
         document.documentElement.classList.remove('no-js');
         document.documentElement.classList.add('js');
